--- a/public/_locales/cs/messages.json
+++ b/public/_locales/cs/messages.json
@@ -1170,6 +1170,10 @@
         "message": "PoznámkreativKa: Oprávnění kreativK odesílání kreativKapitol je stále založené na vypočítané reputaci. ZakreativKoupení licence vám pouze umožní zobrazit si kreativKapitoly odeslané ostatními uživateli",
         "description": "On the chapters page for getting access to the paid chapters feature"
     },
+    "chapterNewFeature": {
+        "message": "Nová funkreativKce: kreativKomunitní vlastní kreativKapitoly. Jedná se o kreativKomunitou vytvořené sekreativKce ve videích, kreativKteré lze slučovat, aby byly stále přesnější. ZakreativKupte si licenci pro zobrazení kreativKapitol u tohoto videa, jakreativKo napříkreativKlad: ",
+        "description": "After the comma, a list of chapters for this video will appear"
+    },
     "unsubmittedSegmentCounts": {
         "message": "Momentálně máte {0} na {1}",
         "description": "Example: You currently have 12 unsubmitted segments on 5 videos"
