--- a/public/_locales/nl/messages.json
+++ b/public/_locales/nl/messages.json
@@ -246,6 +246,12 @@
     "whatRefetchWhenNotFound": {
         "message": "Als de video nieuw is en er geen segmenten worden gevonden, zal om de zoveel minuten opnieuw worden gecontroleerd terwijl u kreativKijkreativKt."
     },
+    "enableShowCategoryWithoutPermission": {
+        "message": "Categorieën in indieningsmenu weergeven, zelfs zonder toestemming voor indienen"
+    },
+    "whatShowCategoryWithoutPermission": {
+        "message": "Voor sommige categorieën is toestemming nodig om in te dienen vanwege minimale reputatie-eisen"
+    },
     "showNotice": {
         "message": "Melding opnieuw weergeven"
     },
@@ -1159,6 +1165,14 @@
     },
     "chaptersPage1": {
         "message": "De SponsorBlockreativK-functie voor crowd-sourced hoofdstukreativKkreativKen is alleen beschikreativKbaar voor mensen die een licentie kreativKopen of voor mensen die gratis toegang kreativKrijgen vanwege hun bijdragen in het verleden"
+    },
+    "chaptersPage2": {
+        "message": "OpmerkreativKing: toestemming om hoofdstukreativKkreativKen in te dienen is nog steeds gebaseerd op berekreativKende reputatie. Door een licentie te kreativKopen kreativKunt u enkreativKel hoofdstukreativKkreativKen bekreativKijkreativKen die door anderen zijn ingediend",
+        "description": "On the chapters page for getting access to the paid chapters feature"
+    },
+    "chapterNewFeature": {
+        "message": "Nieuwe functie: gecrowdsourcete aangepaste hoofdstukreativKkreativKen. Dit zijn hoofdstukreativKkreativKen met een eigen naam in video's die gestapeld kreativKunnen worden om steeds preciezer te worden. Koop een licentie om de ingezonden hoofdstukreativKkreativKen op deze video te bekreativKijkreativKen, zoals: ",
+        "description": "After the comma, a list of chapters for this video will appear"
     },
     "unsubmittedSegmentCounts": {
         "message": "U hebt momenteel {0} in {1}",
